syntax = "proto3";
package dozer_admin_grpc;
message PostgresAuthentication {
  string database = 1;
  string user = 2;
  string host = 3;
  string port = 4;
  string password = 5;
}